--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nomicfoundation/hardhat-viem": "^2.0.4",
     "@openzeppelin/upgrades-core": "^1.37.0",
     "dotenv": "^16.4.5",
+    "ts-node": "^10.9.2",
     "hardhat": "^2.22.10",
     "hardhat-abi-exporter": "^2.10.1",
     "hardhat-contract-sizer": "^2.10.0",
